DefaultAndroidDirectoryResolver: Remove dependency on javafx.util.Pair
Summary:
Fixes: #1219
Closes https://github.com/facebook/buck/pull/1220

Test Plan: Run CI.

Reviewed By: Coneko

fbshipit-source-id: 451c85a